@@ -42,6 +42,7 @@ import org.apache.hadoop.hive.ql.session.SessionState.LogHelper;
 import org.apache.hadoop.mapred.RunningJob;
 import org.apache.hadoop.mapred.Counters.Counter;
 import org.apache.hadoop.mapred.Counters.Group;
+import org.apache.hadoop.mapred.Counters;
 
 /**
  * HiveHistory.
@@ -352,19 +353,19 @@ public class HiveHistory {
    * @param taskId
    * @param rj
    */
-  public void setTaskCounters(String queryId, String taskId, RunningJob rj) {
+  public void setTaskCounters(String queryId, String taskId, Counters ctrs) {
     String id = queryId + ":" + taskId;
     QueryInfo ji = queryInfoMap.get(queryId);
     StringBuilder sb1 = new StringBuilder("");
     TaskInfo ti = taskInfoMap.get(id);
-    if (ti == null) {
+    if ((ti == null) || (ctrs == null)) {
       return;
     }
     StringBuilder sb = new StringBuilder("");
     try {
 
       boolean first = true;
-      for (Group group : rj.getCounters()) {
+      for (Group group : ctrs) {
         for (Counter counter : group) {
           if (first) {
             first = false;
@@ -391,7 +392,7 @@ public class HiveHistory {
       }
 
     } catch (Exception e) {
-      e.printStackTrace();
+      LOG.warn(org.apache.hadoop.util.StringUtils.stringifyException(e));
     }
     if (sb1.length() > 0) {
       taskInfoMap.get(id).hm.put(Keys.ROWS_INSERTED.name(), sb1.toString());
